--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <script src="js/script.js"></script>
     <div id="title">
         <h2>Wellcome to my First GitHub Public Website</h2>
     </div>
