--- a/index.html
+++ b/index.html
@@ -12,5 +12,14 @@
         <h2>Wellcome to my First GitHub Public Website</h2>
     </div>
     <div id="banner"></div>
+    <div id="inputs">
+        <label for="inputX" title="Enter X Value:"></label>
+        <input id="inputX" type="text" placeholder="X Value">
+        
+        <label for="inputY" title="Enter Y Value:"></label>
+        <input id="inputY" type="text" placeholder="Y Value">
+        <button type="button" onclick="sum(inputX,inputY)">Sum</button>
+
+    </div>
 </body>
 </html>
